[package]
name = "assets_unloaded"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="71bf07f5c085b9c02cbe5337040337c3ed8b0002" }
